trunk/Archive2/5c/51572947811b51/output
main.cpp:5:5: error: no matching function for call to 'f'
    f<"hello">(); // error
    ^~~~~~~~~~
main.cpp:2:5: note: candidate template ignored: invalid explicitly-specified argument for template parameter 's'
int f() { return 0; }
    ^
main.cpp:7:5: error: no matching function for call to 'f'
    f<hello>(); // error
    ^~~~~~~~
main.cpp:2:5: note: candidate template ignored: invalid explicitly-specified argument for template parameter 's'
int f() { return 0; }
    ^
2 errors generated.
