trunk/Archive2/5c/51572947811b51/main.cpp
template<const char* s>
int f() { return 0; }

int main() {
    f<"hello">(); // error
    const char* hello = "hello";
    f<hello>(); // error
}